2009-09-20  Per Bothner  <per@bothner.com>

	* DivideOp: No longer implement CanInline; inline support moved
	to CompileArith.java.
	(op, rounding_mode): New fields to specify more operations (including
	MODULO/remainder) and more variants (including rounding modes).
	(quotient, remainder, modulo, div, mod, div0, mod0): New static
	DivideOp instances for the different Scheme division operations.
	(applyN): Re-write to handle different variants.
	(numArgs): New method.
	* CompileArith.java: Add opitmization support for DivideOp.

	* Arithmetic.java (asNumeric): Change to use Numeric.asNumericOrNull.

	* Arithmetic.java (isExact): Consider BigDecimal as inexact.
	(toExact, toInexact): New methods.

2009-09-11  Per Bothner  <per@bothner.com>

	* Arithmetic.java (asRatNum): Use new method RatNum.valueOf.
	(typeRatNum, typeRealNum): Use new LangObjType objects.

	* Arithmetic.java (isExact): New helper method, to generalize
	definition of exact/inexact to standard Java Number classes.
	* IsEqual.java (numberEquals): New method, to likewise generalize,
	and better confirm with R6RS.
	(apply): Use numberEquals.
	* IsEqv.java (apply): Use IsEqual.numberEquals.

2009-08-27  Per Bothner  <per@bothner.com>

	* Not.java:  Moved/renamed from kawa/standard/not.java.
	Move CanInline and Inlineable support to CompileMisc.java.
	* CompileMisc.java: CanInline and Inlineable support for Not.
	* Makefile.am: Update accordingly.

	* ArithOp.java (isSideEffectFree): New method.

2009-08-25  Per Bothner  <per@bothner.com>

	* CompileArith.java (compileIntNum): Add new support for optimizing
	IntNum arithmetic: Call IntNum static operations directly.
	* AddOp.java ($Pl, $Mn): New static fields.
	* Arithmetic.java (typeIntNum): Use LangObjType.integerType, so we
	get desired conversions.
	* NumberCompare.java: Need to use getMethod, since LangObjType
	doesn't support getDeclaredMethod.

2009-08-24  Per Bothner  <per@bothner.com>
