@@ -1,5 +1,7 @@
 2009-09-20  Per Bothner  <per@bothner.com>
 
+	* num-test.scm: New test from Alex Mitchell.
+
 	* fasta.scm: New benchmark, converted from shootout.alioth.debian.org.
 	This was inspired by a combination of
         (1) PLT version contributed by Matthew Flatt
