@@ -1,5 +1,7 @@
 2009-09-20  Per Bothner  <per@bothner.com>
 
+	* CompileArith.java (getReturnKind): Fix thinko.
+
 	* DivideOp: No longer implement CanInline; inline support moved
 	to CompileArith.java.
 	(op, rounding_mode): New fields to specify more operations (including
